@@ -1,5 +1,5 @@
 /*
- * "$Id: listen.c,v 1.9.2.6 2003/01/07 18:27:25 mike Exp $"
+ * "$Id: listen.c,v 1.9.2.7 2003/01/23 16:27:18 mike Exp $"
  *
  *   Server listening routines for the Common UNIX Printing System (CUPS)
  *   scheduler.
@@ -130,8 +130,8 @@ StartListening(void)
     * Didn't find it!  Use an address of 0...
     */
 
-    LogMessage(L_ERROR, "StartListening: Unable to find IP address for server name \"%s\"!\n",
-               ServerName);
+    LogMessage(L_ERROR, "StartListening: Unable to find IP address for server name \"%s\" - %s\n",
+               ServerName, hstrerror(h_errno));
 
     ServerAddr.ipv4.sin_family = AF_INET;
   }
@@ -227,5 +227,5 @@ StopListening(void)
 
 
 /*
- * End of "$Id: listen.c,v 1.9.2.6 2003/01/07 18:27:25 mike Exp $".
+ * End of "$Id: listen.c,v 1.9.2.7 2003/01/23 16:27:18 mike Exp $".
  */
